GP-CONSULTING/GP-POL-AS-CODE/1-POLICIES/gatekeeper/constraints/production/pod-security-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodSecurityStandard
metadata:
  name: pod-security-standard-restricted
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - default
      - production
  parameters:
    allowPrivileged: false
    allowHostNetwork: false
    allowedCapabilities: []
